--- a/index.html
+++ b/index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./styles/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./styles.css" rel="stylesheet" />
     <title>Конвертер</title>
-    <style>h1 {text-align:center;}</style>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-</head>
-<body>
-</ul>
-  <div class="Conv">  
-     <h1>Конвертер Валют</h1>
+  </head>
+  <body>
+    <div class="Conv">
+      <h1>Конвертер Валют</h1>
     </div>
-<hr>
-</ul>
-   <div class="valute">
-        <p>Курс EUR: <span class="eur"></span></p>
-        <p>Курс USD: <span class="usd"></span></p>
+    <hr />
+    <div class="valute">
+      <p>Курс EUR: <span class="eur"></span></p>
+      <p>Курс USD: <span class="usd"></span></p>
     </div>
-<hr>
-<ul>
-  <div><a class="Conve">  
-     <strong><pre>Введите нужную сумму<div>    
-</ul>
-<ul>
-   <div class="convert">
-        <p>Евро: <input type="text" class="eur-input"></p>
-        <p>Евро в рублях: <span class="eur-in-rub">0 Руб</span></p>
-        <p>Доллар: <input type="text" class="usd-input"></p>
-        <p>Доллар в рублях: <span class="usd-in-rub">0 Руб</span></p>
+    <hr />
+    <p class="vvedite-summu">Введите нужную сумму</p>
+    <div class="convert">
+      <p>Евро: <input type="text" class="eur-input" /></p>
+      <p>Евро в рублях: <span class="eur-in-rub">0 Руб</span></p>
+      <p>Доллар: <input type="text" class="usd-input" /></p>
+      <p>Доллар в рублях: <span class="usd-in-rub">0 Руб</span></p>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
